# monorepo

./: .gitignore  .tool-versions  BUILD.bazel  CPPLINT.cfg  MODULE.bazel  README.md  buildifier_check.py  cspell.config.yaml  pyproject.toml  requirements.txt
.github/: renovate-global.js  renovate.json5
.github/workflows/: renovate.yml
cpp/: README.md
cpp/leetcode_algorithm/: 66_plus_one.cpp  BUILD.bazel  README.md  binarytree.hpp  catch.hpp
cpp/leetcode_algorithm/array/: 66_plus_one.cpp
cpp/leetcode_algorithm/binary_search/: 704_binary_search.cpp
docs/.zennotes/: note-meta-cache-v1.json  vault.json  workspace.json
docs/inbox/: Welcome.md
docs/inbox/monorepo/: how-to-setup-renovate.md
python/: BUILD.bazel  README.md
python/aws/: list_assumable_role.py  list_role_policy.py  temp.py
python/common/: BUILD.bazel  execute_async.py  logging_util.py  path_util.py  sys_util.py  test_execute.py  test_execute_async.py  test_langchain_invoke.py  test_logging_util.py  test_path_util.py  test_sys_util.py
python/crewai_hello_world/: BUILD.bazel  main.py  main2.py  model.py
python/crewai_hello_world/crews/outline_book_crew/: outline_book_crew.py
python/crewai_hello_world/crews/outline_book_crew/config/: agents.yml  tasks.yml
python/crewai_hello_world/tools/: ddg.py
python/dagster_hello_world/: BUILD.bazel  assets.py  main.py
python/docx2md/: formatter.py  parser.py  types.py
python/hello_world/: BUILD.bazel  main.py
python/leetcode_algorithm/: BUILD.bazel  README.md
python/leetcode_algorithm/array/: 66_plus_one.py
python/leetcode_algorithm/binary_search/: 11_container_with_most_water.cpp  704_binary_search.py
python/llm_backend/gh_create_pr_body/: gh_create_pr_body.py
python/llm_cli/plugins/models/: pyproject.toml
python/llm_cli/plugins/models/llm_plugin_azure/: __init__.py  openai.py
python/llm_cli/plugins/tools/: pyproject.toml
python/llm_cli/plugins/tools/llm_plugin_cmd/: __init__.py
python/llm_cli/plugins/tools/llm_plugin_extract_city/: __init__.py
python/local_fs/: cp_to_data_repo.py
python/myscripts/windows/: get_keyboard_language.py
python/pokemon_cafe_booking/: BUILD.bazel  main.py
python/pptx2md/: formatter.py  parser.py  pptx2md_cli.py  pptx_util.py
python/regexlib/: base.py  main_test.py
python/regexlib/country/: tw.py
python/safeincloud/: decrypter.py  main.py
python/sleepwatcher/: disable_sleepwatcher.py  should_run.py
python/spreadsheet_llm/: LLM_CONTEXT_ENCODER_INSTRUCTION.md  README.md  data_format_aggregation.py  inverted_index.py  llm_context_encoder.py  llm_spreadsheet_extractor.py  sheet_compressor.py  sheet_model.py  structural_anchors.py  test_llm_context_encoder.py  test_sheet_compressor.py
python/spreadsheet_llm/sample_data/: big_sheet.xlsx  converter_test.xlsx  test_sheet.xlsx
python/spreadsheet_llm/xlsx2html/: cli.py  parser.py  test_xlsx2html.py  types.py
python/spreadsheet_llm/xlsx2md/: parser.py  xlsx2md_cli.py  xlsx2md_util.py
python/termux_backend/dagster/: BUILD.bazel  main.py  workspace.py  workspace_definition.py
rules/cpp/lint/: BUILD.bazel  check.sh  check_all.sh  defs.bzl  fix.sh  fix_all.sh
rules/python/dagster/: BUILD.bazel  defs.bzl  main_template.py  sitecustomize.py
rules/python/lint/: BUILD.bazel  check_all.sh  defs.bzl  fix.sh  fix_all.sh
rules/python/poetry/: BUILD.bazel  check_requirements_txt.sh  update_requirements_txt.sh
rules/python/streamlit/: BUILD.bazel  defs.bzl  main_template.py
tools/cspell/: README.md  dictionary.txt
tools/python/: check_all.sh  defs.bzl  fix_all.sh  lint.sh
tools/repos/: chromedriver_ext.bzl
