load("@buildifier_prebuilt//:rules.bzl", "buildifier")

# Python: make requirements.txt visible to the project.
exports_files(
    srcs = ["requirements.txt"],
)

test_suite(
    name = "leetcode_algorithm_test",
    tests = [
        "//packages/leetcode_algorithm:all_tests",
    ],
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "warn",
    mode = "diff",
)

buildifier(
    name = "buildifier.fix",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "fix",
    mode = "fix",
)
