"""Top level module for monorepo."""
bazel_dep(name = "bazel_skylib", version = "1.2.1")
bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_go", version = "0.52.0")

# Unofficial support: https://github.com/bazelbuild/buildtools/issues/1204#issuecomment-1955867708
bazel_dep(name = "buildifier_prebuilt", version = "8.0.3")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

go_sdk.download(version = "1.23.4")

# Setup Python runtime
python.toolchain(
    python_version = "3.11",
)

# Setup requirement.txt
pip.parse(
    download_only = True,
    hub_name = "monorepo_pip",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "monorepo_pip")
