[tool.poetry]
authors = ["Jack Cho <jack06215@gmail.com>"]
description = ""
name = "monorepo"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "3.13.13" # python version. `dagster-slack` requires python > 3.11 and < 3.13

Markdown = "^3.8"
PyJWT = "^2.10.1"
adlfs = "^2024.12.0"
asn1crypto = "^1.5.1"
auth0-python = "^4.7.1"
autoflake = "^2.3.1"
autopep8 = "^2.3.2"
bazel-runfiles = "^2.1.0"
beautifulsoup4 = "^4.13.4"
cffi = "^2.1.0"
colorlog = "^6.9.0"
cryptography = "^42.0.8"
dagster = "^1.13.13"
dagster-slack = "^0.29.13"
dagster-webserver = "^1.13.13"
databases = {extras = ["postgresql"], version = "^0.9.0"}
dependency-injector = "^4.46.0"
dlt = "^1.17.1"
duckdb = "^1.2.2"
duckduckgo-search = "^8.0.2"
elasticsearch = "^8.18.0"
elasticsearch-async = "^6.2.0"
email-validator = "^2.2.0"
face-recognition = "^1.3.0"
fake-useragent = "^1.5.1"
fastapi = "^0.115.12"
fastparquet = "^2024.11.0"
flake8 = "^7.2.0"
google-api-python-client = "^2.167.0"
google-api-python-client-stubs = "^1.29.0"
google-auth = "^2.39.0"
google-auth-oauthlib = "^1.2.1"
gspread = "^6.2.0"
gspread-formatting = "^1.2.1"
idna = "^3.10"
instructor = "^1.5.2"
isort = "^5.13.2"
japanize-matplotlib = "^1.1.3"
langchain = "^1.0.2"
langchain-community = "^0.4.2"
langchain-ollama = "^1.1.0"
langchain-openai = "^1.0.1"
langgraph = "^1.0.1"
lxml = "^5.4.0"
mistune = "^3.1.3"
mypy = "^1.15.0"
mypy-extensions = "^1.1.0"
notebook = "^7.4.0"
numpy = "^2.2.4"
openai = "^1.109.1"
opencv-python = "^4.11.0.86"
openpyxl = "^3.1.5"
openpyxl-stubs = "0.1.25"
pandas = "^2.2.3"
pandas-stubs = ">=2.2.2.0,<2.2.4"
pillow = "^11.2.1"
pre-commit = "^3.8.0"
psycopg2-binary = "2.9.10"
pyarrow = "^18.1.0"
pycparser = "^2.22"
pydantic = "^2.11.3"
pytest = "<8.2.0"
python-docx = "^1.2.0"
python-pptx = "^1.0.2"
pytz = "~2024.2"
requests = "^2.32.5"
ruff = "^0.15.21"
selenium = "^4.31.0"
setuptools = "^83.0.0"
six = "^1.17.0"
slack-client = "^0.3.0"
slack-sdk = "^3.35.0"
sqlalchemy = "^2.0.40"
sseclient-py = "^1.8.0"
starlette = "^0.46.1"
tenacity = "^8.5.0"
termcolor = "^2.5.0"
tqdm = "^4.67.1"
typeguard = "^4.4.2"
types-requests = ">=2.23.4,<3.0.0"
uvicorn = "^0.51.0"
xlsxwriter = "^3.2.9"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
  "truthy-iterable",
]
exclude = ["generated", "migrations"]
explicit_package_bases = true
extra_checks = true
mypy_path = ["packages"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
