[tool.poetry]
authors = ["Jack Cho <jack06215@gmail.com>"]
description = ""
name = "monorepo"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "3.13.13" # python version. `dagster-slack` requires python > 3.11 and < 3.13

Markdown = "^3.10.2"
PyJWT = "^2.13.0"
adlfs = "^2026.5.0"
asn1crypto = "^1.5.1"
auth0-python = "^6.0.0"
autoflake = "^2.3.3"
autopep8 = "^2.3.2"
bazel-runfiles = "^2.2.0"
beautifulsoup4 = "^4.15.0"
cffi = "^2.1.0"
colorlog = "^6.11.0"
cryptography = "^49.0.0"
dagster = "^1.13.14"
dagster-slack = "^0.29.14"
dagster-webserver = "^1.13.14"
databases = {extras = ["postgresql"], version = "^0.9.0"}
dependency-injector = "^4.49.1"
dlt = "^1.29.0"
duckdb = "^1.5.4"
duckduckgo-search = "^8.1.1"
elasticsearch = "^9.4.1"
elasticsearch-async = "^6.2.0"
email-validator = "^2.3.0"
face-recognition = "^1.3.0"
fake-useragent = "^2.2.0"
fastapi = "^0.139.2"
fastparquet = "^2026.5.0"
flake8 = "^7.3.0"
google-api-python-client = "^2.198.0"
google-api-python-client-stubs = "^1.39.0"
google-auth = "^2.56.0"
google-auth-oauthlib = "^1.4.0"
gspread = "^6.2.1"
gspread-formatting = "^1.2.1"
idna = "^3.18"
instructor = "^1.15.4"
isort = "^8.0.1"
japanize-matplotlib = "^1.1.3"
langchain = "^1.3.14"
langchain-community = "^0.4.2"
langchain-ollama = "^1.1.0"
langchain-openai = "^1.3.5"
langgraph = "^1.2.9"
lxml = "^6.1.1"
mistune = "^3.3.3"
mypy = "^2.3.0"
mypy-extensions = "^1.1.0"
notebook = "^7.6.0"
numpy = "^2.5.1"
openai = "^2.46.0"
opencv-python = "^4.11.0.86"
openpyxl = "^3.1.5"
openpyxl-stubs = "0.1.25"
pandas = "^3.0.3"
pandas-stubs = "^3.0.3.260530"
pillow = "^12.3.0"
pre-commit = "^4.6.0"
psycopg2-binary = "2.9.12"
pyarrow = "^25.0.0"
pycparser = "^3.0"
pydantic = "^2.13.4"
pytest = "^9.1.1"
python-docx = "^1.2.0"
python-pptx = "^1.0.2"
pytz = "^2026.2"
requests = "^2.34.2"
ruff = "^0.15.22"
selenium = "^4.46.0"
setuptools = "^83.0.0"
six = "^1.17.0"
slack-client = "^0.3.0"
slack-sdk = "^3.43.0"
sqlalchemy = "^2.0.51"
sseclient-py = "^1.9.0"
starlette = "^1.3.1"
tenacity = "^9.1.4"
termcolor = "^3.3.0"
tqdm = "^4.69.0"
typeguard = "^4.5.2"
types-requests = ">=2.33.0.20260712,<3.0.0"
uvicorn = "^0.51.0"
xlsxwriter = "^3.2.9"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
  "truthy-iterable",
]
exclude = ["generated", "migrations"]
explicit_package_bases = true
extra_checks = true
mypy_path = ["packages"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
