load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# Aggregate check/fix over every py_library/py_binary built via
# //rules/python/lint:defs.bzl (they generate `<name>.lint` / `<name>.fix`
# targets). These discover their targets with `bazel query` at run time, so
# no manual list of packages needs to be kept up to date here.
sh_binary(
    name = "check",
    srcs = ["//rules/python/lint:check_all.sh"],
)

sh_binary(
    name = "fix",
    srcs = ["//rules/python/lint:fix_all.sh"],
)
