load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "prettyprint",
    srcs = ["prettyprint.hpp"],
)

cc_library(
    name = "catch",
    srcs = ["catch.hpp"],
)

cc_library(
    name = "binarytree",
    srcs = ["binarytree.hpp"],
)

[
    cc_test(
        name = src[:-len(".cpp")].split("/")[-1],
        srcs = [src],
        deps = [
            ":binarytree",
            ":catch",
            ":prettyprint",
        ],
    )
    for src in glob(["**/*.cpp"])
]
