load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "prettyprint",
    srcs = ["prettyprint.hpp"],
)

cc_library(
    name = "catch",
    srcs = ["catch.hpp"],
)

cc_library(
    name = "binarytree",
    srcs = ["binarytree.hpp"],
)

_TEST_SRCS = glob(["**/*.cpp"])

[
    cc_test(
        name = src[:-len(".cpp")].split("/")[-1],
        srcs = [src],
        deps = [
            ":binarytree",
            ":catch",
            ":prettyprint",
        ],
    )
    for src in _TEST_SRCS
]

test_suite(
    name = "all_tests",
    tests = [src[:-len(".cpp")].split("/")[-1] for src in _TEST_SRCS],
)
