load("@monorepo_pip//:requirements.bzl", "requirement")
load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")

py_library(
    name = "crewai_hello_world_lib",
    srcs = ["main.py"],
    data = glob(
      [".env*"],
      allow_empty = True,
    ),
    deps = [
      requirement("crewai"),
      requirement("pandas"),
    ],
)

py_binary(
    name = "crewai_hello_world",
    srcs = glob(
      ["*.py"]
    ),
    main = "main.py",
    deps = [
      ":crewai_hello_world_lib",
    ],
)
