load("@monorepo_pip//:requirements.bzl", "requirement")
load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")

py_library(
    name = "dagster_hello_world_lib",
    srcs = ["assets.py"],
    data = [
        "data/sample_data.csv",
    ],
    deps = [
        requirement("pydantic"),
        requirement("pandas"),
        requirement("dagster"),
        requirement("dagster-webserver"),
        requirement("requests-toolbelt"),
    ],
)

py_binary(
    name = "dagster_hello_world",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        ":dagster_hello_world_lib",
    ],
)
