load("@monorepo_pip//:requirements.bzl", "requirement")
load("//tools/python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "dagster_hello_world_lib",
    srcs = ["assets.py"],
    data = [
        "data/sample_data.csv",
    ],
    deps = [
        requirement("pydantic"),
        requirement("pandas"),
        requirement("dagster"),
        requirement("dagster-webserver"),
        requirement("requests-toolbelt"),
    ],
)

py_binary(
    name = "dagster_hello_world",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        ":dagster_hello_world_lib",
    ],
)
