load("@monorepo_pip//:requirements.bzl", "requirement")
load("//rules/python/dagster:defs.bzl", "dagster_dagit")
load("//rules/python/lint:defs.bzl", "py_library")

filegroup(
    name = "dagster_hello_world_data",
    srcs = ["data/sample_data.csv"],
    visibility = [":__subpackages__"],
)

py_library(
    name = "dagster_hello_world_lib",
    srcs = ["workspace.py"],
    data = [
        ":dagster_hello_world_data",
    ],
    deps = [
        requirement("pydantic"),
        requirement("pandas"),
        requirement("dagster"),
        requirement("dagster-webserver"),
        requirement("requests-toolbelt"),
    ],
)

dagster_dagit(
    name = "dagster_hello_world",
    defs_src = "workspace.py",
    deps = [
        ":dagster_hello_world_lib",
    ],
)
