load("@rules_python//python:py_test.bzl", "py_test")

_TEST_SRCS = glob(["**/*.py"])

[
    py_test(
        name = src[:-len(".py")].split("/")[-1],
        srcs = [src],
        legacy_create_init = False,
        main = src,
    )
    for src in _TEST_SRCS
]

test_suite(
    name = "all_tests",
    tests = [src[:-len(".py")].split("/")[-1] for src in _TEST_SRCS],
)
