load("@monorepo_pip//:requirements.bzl", "requirement")
load("@rules_python//python:py_binary.bzl", "py_binary")

filegroup(
    name = "sample_data_csv",
    srcs = [
        "data/sample_data.csv",
    ],
)

py_library(
    name = "workspace_definition",
    srcs = ["workspace_definition.py"],
    deps = [
        requirement("dagster"),
    ],
)

py_library(
    name = "workspace_lib",
    srcs = ["workspace.py"],
    data = [":sample_data_csv"],
    deps = [
        ":workspace_definition",
        requirement("pydantic"),
        requirement("pandas"),
        requirement("dagster"),
    ],
)

py_binary(
    name = "dagster_workspace",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        ":workspace_lib",
    ],
)
